tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__AutomationforFlu-AAAAAAAAAAAAAAAAAAAMfw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3199,
  "optional_prerequisites": [
    3154,
    3157
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "If you've looked at the wiki setups, you might have seen some that seem harder to automate than others. Particularly, that one with two kinds of Uranium Rods. More than filling empty slots with Reactor Platings to force all the inputs to move to the specific slots where the rods must go, this one needs each rod to go in a specific slot!\n\nThe solution for this is a GT cover. The Robot Arm does the same action of moving items around as the Conveyor, but it moves to specific slots. With this, you can move the Dual Rod to where it needs to be, and the Quad Rods can fill the remaining slots as intended. If you're using other setups, you can use a similar logic to do your automation.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Automation for Fluid Nukes",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
