tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__BasisforAllReact-AAAAAAAAAAAAAAAAAAAMSQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3145,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nuclear energy is first available in EV. However, it comes in all shapes and forms, and it can be hard to choose one kind of setup to use amongst all of those that are available. To start this questbook page, this first quest will be a summary of how nuclear power can be produced, and when it is available. Other quests down the line will have more details about each specific setup, but this is an overview of all of them.\n\nTL;DR: Nuke < Fluid Nuke < Vacuum Nuke < LFTR = THTR = Naq Reactor < Fusion < Compact Fusion for power, per reactor. For breeding, Nuke < LFTR = Naq Reactor < HTGR in terms of breeding speed and outputs, with fusion being required to make some materials.\n\nThe first nuclear source you have access to is the Industrialcraft 2 Nuclear Reactor, usually called a nuke. It's a small singleblock that can have additional chambers attached to it to make a multiblock structure, and the amount of chambers decides the amount of space available for the nuke's components. Inside it, fuel rods with radioactive materials generate power, and every other item serves to control the temperature of the reactor and keep it from exploding. It generates EU directly, but it can be upgraded to a fluid nuke, which outputs hot coolant instead, for the Large Heat Exchanger, but with more efficiency. Lastly, there's also the vacuum nuke, which is very similar to regular nukes but it cools down by using Coolant Cells, which wear out and are only reusable by using Vacuum Freezers. Usual fuels for all of these are Thorium, in EV, and Uranium, in IV.\n\nBetween IV and LuV, there's another kind of reactor, the Liquid Fluoride Thorium Reactor (LFTR). In this large multi, the Thorium and Uranium are mixed with very hot, molten salts (which need to be prepared in another multi), improving the power generation at the cost of additional processing. It's an expensive setup, but the depleted fuel can be recycled into many more byproducts than usual, especially at LuV, where you can get almost all the noble gases amongst other things, alongside huge amounts of power.\n\nAt those same tiers (albeit mostly for LuV and above), there are also two larger multis, the Thorium High Temperature Reactor (THTR) and the High Temperature Gas-cooled Reactor (HTGR). The THTR is mostly for power, needing an input of about 0.5 IV amps and outputting LuV power at a varied amount of amps, whereas the HTGR is a breeder reactor, outputting 1/20 the amount of hot coolant, which is where the power generation comes from, but with much better ratios for breeding into Lutetium and other elements.\n\nAnother kind of nuclear reactor is the Good Generators Naquadah Reactor, which coincidentally has recipes to consume Thorium Liquid Fuel and Uranium Liquid Fuel, alongside the several types of Naquadah fuel that exist. With these two, this reactor can process those elements much faster than regular nukes, which is helpful for power and for breeding, but it requires more processing until those fuels are ready to be consumed. Additionally, there are fuel rods for the IC2 nukes that use different Thorium and Uranium fuels, more or less related to these.\n\nFrom then on, it's fusion power. The infamous GregTech Fusion Reactors work by fusing two elements into a new one, which is often a required step for progression, but they also turn the power they require into exponentially more in the way of plasma. Helium and Tin Plasma are some of the most used for power, and putting them into Plasma Turbines is an excellent source of power for lategame, in ZPM to UEV and so on. There are 4 tiers to the regular Fusion Reactors, but there is also compact fusion and some other kinks to fusion that you might explore later on.\n\nThis page will mostly serve to guide you into making a choice between all of these possibilities. It's pretty much guaranteed that you'll use at least 2-3 of these setups, so try to get comfortable with these quest descriptions.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Basis for All Reactors",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
