tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__CanWeGetUraniumH-AAAAAAAAAAAAAAAAAAAMYA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3168,
  "prerequisites": [
    3157
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Yes, you can. In fact, you can get it much earlier than EV, but the speed at which you get it can vary wildly, depending on how you approach this problem. Uranium is the main upgrade to Thorium in nukes, with a lot more power to give and a different useful breeding byproduct, but you need about 3 stacks of Uranium 238 to set up the most powerful basic IC2 Uranium Nuke.\n\nHow do you get it, though? The one answer is, you get it from Thorium. Looking at NEI, the Thorium ore processing has a chance to give Uranium dusts, which you can use as fuel, but this happens very slowly, especially considering that Thorium is a rare ore in the Nether, even if each ore block gives 4 crushed dust. The reality seems to be that fast Uranium only happens when you can mine from t2 planets, but this is not the only way. There is a secret, and this secret involves IC2 crops.\n\nHow does it work? Well, it's simple. The IC2 crop that corresponds to Thorium, the God of Thunder, can quadruple each Crushed Thorium Ore into 4 Purified Thorium Ore, but it also outputs, in fluid form, one Uranium Ingot! This means that each Thorium Ore gives you 4 Uranium Ingots, and with around 42 ore, you can do one cycle of that big reactor setup. God of Thunder needs the ore under it, though, so make sure you save some for that purpose.\n\nEV Uranium nukes are an achievement intended mostly for IC2 crop users, so this quest won't demand something like that. Still, it's a useful secret, so here it is. Additionally, the Uranium crop quest in the questbook awards you with 32 Pitchblende when you complete it, which might prove useful for both for quadrupling Uranium and getting Radium for Radon!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Can We Get Uranium Here?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3157
  ],
  "rewards": [],
  "tasks": []
}
