tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__DuraniumandtheCy-AAAAAAAAAAAAAAAAAAAMgw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3203,
  "optional_prerequisites": [
    3186,
    3189
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "In the previous quest, Duranium was introduced as a material used to make Tritanium. While it becomes required for this reason, there is more to it than that. Another recipe that uses it is a Cyclotron recipe, which has a chance to produce a Quantum Anomaly.\n\nFirst off, what is the Cyclotron? That is a multiblock that works a bit like fusion, but only for the purpose of making new materials. It collides single particles with one another, or against fluids, to generate new items while consuming power. Most of the recipes it has won't be very useful, if at all, but it can also make Quantum Anomalies. This is a chance craft, but the Anomaly has a special property: when used to convert some blocks to others, it will not be consumed. Therefore, for that purpose, you only need to get one.\n\nIs this required? Well, yes. When you arrive at a certain stage of the game, you might find yourself needing a new kind of soldering alloy, called Mutated Living Solder. To craft this, you need a Chemical Plant made with Botmium, which is an alloy that required Advanced Nitinol. This, in turn, is one of the blocks that need a Quantum Anomaly for its conversion. Given that Duranium is the only fluid choice to make the Anomaly, then it becomes required for this as well, but only a couple tiers from ZPM.\n\nAdditionally, there are other recipes, like the Elemental Duplicator. This is a very powerful replicator that will give you a great boost in automation due to its speed and the replication recipes it can do, but the Quantum Anomaly used in this recipe will be consumed, so watch out: if you only have one, don't use it for this. Later on, however, you will encounter other recipes that consume the anomaly, namely the casings for the Quantum Force Transformer, so it will be important to automate their production by then.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Duranium and the Cyclotron",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
