tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__ExcitedFluidNuke-AAAAAAAAAAAAAAAAAAAMZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3173,
  "prerequisites": [
    3171
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This quest is after the vacuum nuke one because the fuel required to do a setup like this is harder to get. Whereas the previous rods were made with compressed Uranium, this fuel needs that same material to then be further processed in GoodGenerators machines, namely the Neutron Activator, to make Excited Uranium Liquid Fuel. It is directly usable in the Naquadah Reactor, with more fuel efficiency there, but you might not be able to build it yet, since it's post-fusion. Instead, you can use said fuel here.\n\nBefore attempting this, you need to know all the mechanics related to the fluid nuke. In fact, this quest won't even have any required tasks, given how challenging it is to create a good setup of this kind. At the time of writing this quest, there is no nuke simulator that supports the Excited Fuel Rods, which means you'll have to first test in Creative mode and gather whatever results you get from there.\n\nThe basis for this setup is simple: Excited Uranium Fuel Rods, the only kind you should consider for this, output 16x more heat than the regular ones, which is a lot more Hot Coolant output if you can send all this heat to the reactor to be turned into power. Only the heat matters, which means that extra EU/t based on temperature will do nothing here. Throw as many rods as you can at this nuke without overheating, that is the challenge.\n\nWhat then? You will surely need many multis if you want to process LuV amps of power, unless you choose some more advanced options. The LHE upgrades into the EHE, the Extreme Heat Exchanger, and this new multi can output either Superheated or Supercritical Steam. For the former, use XL Steam Turbines to process the ludicrous amount of Steam you will be getting. For the latter, you need special turbines.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Excited Fluid Nukes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3171
  ],
  "rewards": [],
  "tasks": []
}
